WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12049
RenderBlock::calcMinMaxWidth() should not examine children of fixed-width blocks
https://bugs.webkit.org/show_bug.cgi?id=12049
Summary
RenderBlock::calcMinMaxWidth() should not examine children of fixed-width blocks
mitz
Reported
2006-12-31 14:15:38 PST
Patch forthcoming.
Attachments
Optimize
(3.15 KB, patch)
2006-12-31 14:20 PST
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2006-12-31 14:20:07 PST
Created
attachment 12138
[details]
Optimize
mitz
Comment 2
2006-12-31 14:25:37 PST
Comment on
attachment 12138
[details]
Optimize No layout test regressions.
Dave Hyatt
Comment 3
2006-12-31 14:28:43 PST
Comment on
attachment 12138
[details]
Optimize I started trickling support for the intrinsic and min-intrinsic keywords into flexible boxes. min-width: intrinsic, for example, would mean you need to check the kids still. I'm not sure we need to deal with this now... but a FIXME reminding us that we need to deal with this issue when fully implementing these keywords might be helpful.
Dave Hyatt
Comment 4
2006-12-31 14:30:07 PST
This optimization is valid for flexible boxes too.
Dave Hyatt
Comment 5
2006-12-31 14:55:20 PST
Another point to make is that I would like to eventually exclude "self-width/min-width/max-width" checks and only use them for your children (and not yourself). As long as they are included in self-calculations, flexible boxes will be broken. Anyway, just getting my thoughts down where someone else can absorb them. :)
Dave Hyatt
Comment 6
2006-12-31 14:55:43 PST
Comment on
attachment 12138
[details]
Optimize r=me
David Kilzer (:ddkilzer)
Comment 7
2006-12-31 17:05:03 PST
Committed revision 18497.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug