WebCore:

Reviewed by Hyatt.

        - http://bugs.webkit.org/show_bug.cgi?id=12049
          RenderBlock::calcMinMaxWidth() should not examine children of fixed-width blocks

        No test possible (no change to functionality).

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::calcMinMaxWidth): Call calc{Inline,Block}MinMaxWidth()
        only if their result is needed.



Canonical link: https://commits.webkit.org/15541@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18497 268f45cc-cd09-0410-ab3c-d52691b4dbfc